--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
         "symfony/yaml": "6.0.*",
         "tattali/calendar-bundle": "^1.2",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "umbrella2/adminbundle": "^6.1"
     },
     "config": {
         "allow-plugins": {
@@ -96,7 +97,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "6.0.*"
         }
     },
