add stimulus controller and modal

--- a/package.json
+++ b/package.json
@@ -14,5 +14,15 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "@fullcalendar/core": "^5.10.1",
+        "@fullcalendar/daygrid": "^5.10.1",
+        "@fullcalendar/interaction": "^5.10.1",
+        "@fullcalendar/timegrid": "^5.10.1",
+        "axios": "^0.26.1",
+        "bootstrap": "^5.1.3",
+        "flatpickr": "^4.6.11",
+        "stimulus-flatpickr": "^1.4.0"
     }
 }
