--- a/composer.json
+++ b/composer.json
@@ -105,6 +105,7 @@
         "symfony/debug-bundle": "6.0.*",
         "symfony/maker-bundle": "^1.0",
         "symfony/stopwatch": "6.0.*",
-        "symfony/web-profiler-bundle": "6.0.*"
+        "symfony/web-profiler-bundle": "6.0.*",
+        "zenstruck/foundry": "^1.17"
     }
 }
