--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
         "@fullcalendar/daygrid": "^5.10.1",
         "@fullcalendar/interaction": "^5.10.1",
         "@fullcalendar/timegrid": "^5.10.1",
+        "@kanety/stimulus-menu": "^1.0.4",
         "axios": "^0.26.1",
         "bootstrap": "^5.1.3",
         "flatpickr": "^4.6.11",
-        "stimulus-flatpickr": "^1.4.0"
+        "mmenu-js": "^9.1.1",
+        "mmenu-light": "^3.1.1",
+        "stimulus-flatpickr": "^1.4.0",
+        "tailwindcss": "^3.0.23"
     }
 }
