unsuccessful attempt at mmenu and tabler

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,11 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    app.menu_builder:
+      class: App\Menu\MenuBuilder
+      arguments: ["@knp_menu.factory"]
+      tags:
+        - { name: knp_menu.menu_builder, method: createMainMenu, alias: main } # The alias is what is used to retrieve the menu
+
+  # ...
