--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,13 @@
         "doctrine/doctrine-bundle": "^2.5",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
+        "kevinpapst/tabler-bundle": "dev-tac",
+        "knplabs/knp-menu-bundle": "^3.2",
         "nelmio/cors-bundle": "^2.2",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.2",
         "sensio/framework-extra-bundle": "^6.1",
+        "survos/base-bundle": "^2.0.3",
         "symfony/asset": "6.0.*",
         "symfony/console": "6.0.*",
         "symfony/doctrine-messenger": "6.0.*",
@@ -45,6 +48,7 @@
         "symfony/webapp-meta": "^1.0",
         "symfony/webpack-encore-bundle": "^1.12",
         "symfony/yaml": "6.0.*",
+        "tabler/tabler": "^0.0.33",
         "tattali/calendar-bundle": "^1.2",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
@@ -111,6 +115,19 @@
         "zenstruck/foundry": "^1.17"
     },
     "repositories": {
+        "tabler_bundle": {
+            "type": "vcs",
+            "url": "git@github.com:survos/TablerBundle.git"
+        },
+        "tabler": {
+            "type": "vcs",
+            "url": "git@github.com:tacman/tabler.git"
+        },
+
+        "survos_admin_bundle": {
+            "type": "vcs",
+            "url": "git@github.com:survos/SurvosAdminBundle.git"
+        },
         "survos_base_bundle": {
             "type": "vcs",
             "url": "git@github.com:survos/BaseBundle.git"
