--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,14 @@
         "doctrine/doctrine-bundle": "^2.5",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
+        "graceas/php-ics-reader": "^1.1",
         "kevinpapst/tabler-bundle": "dev-tac",
         "knplabs/knp-menu-bundle": "^3.2",
         "nelmio/cors-bundle": "^2.2",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.2",
         "sensio/framework-extra-bundle": "^6.1",
-        "survos/base-bundle": "^2.0.3",
+        "survos/base-bundle": "^2.3",
         "symfony/asset": "6.0.*",
         "symfony/console": "6.0.*",
         "symfony/doctrine-messenger": "6.0.*",
