--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,13 @@
         "graceas/php-ics-reader": "^1.1",
         "kevinpapst/tabler-bundle": "dev-tac",
         "knplabs/knp-menu-bundle": "^3.2",
+        "league/commonmark": "^2.2",
         "nelmio/cors-bundle": "^2.2",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.2",
         "sensio/framework-extra-bundle": "^6.1",
         "survos/base-bundle": "^2.3",
+        "survos/workflow-extension-bundle": "*@dev",
         "symfony/asset": "6.0.*",
         "symfony/console": "6.0.*",
         "symfony/doctrine-messenger": "6.0.*",
@@ -53,6 +55,7 @@
         "tabler/tabler": "^0.0.33",
         "tattali/calendar-bundle": "^1.2",
         "twig/extra-bundle": "^2.12|^3.0",
+        "twig/markdown-extra": "^3.3",
         "twig/twig": "^2.12|^3.0",
         "umbrella2/adminbundle": "^6.1"
     },
@@ -96,7 +99,8 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "codestyle": "vendor/bin/php-cs-fixer fix src/Controller/ --verbose --rules=@PhpCsFixer,@PSR2,@Symfony,@PHP80Migration,@PHP81Migration,modernize_strpos --allow-risky=yes --show-progress=none"
     },
     "conflict": {
         "symfony/symfony": "*"
@@ -109,6 +113,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "friendsofphp/php-cs-fixer": "^3.8",
         "survos/maker-bundle": "dev-main",
         "symfony/debug-bundle": "6.0.*",
         "symfony/maker-bundle": "^1.38",
@@ -117,6 +122,10 @@
         "zenstruck/foundry": "^1.17"
     },
     "repositories": {
+        "survosworkflow": {
+            "type": "path",
+            "url": "../../bundles/WorkflowBundle"
+        },
         "tabler_bundle": {
             "type": "vcs",
             "url": "git@github.com:survos/TablerBundle.git"
