--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/orm": "^2.11",
         "gedmo/doctrine-extensions": "^3.6",
         "graceas/php-ics-reader": "^1.1",
+        "jsvrcek/ics-bundle": "dev-tac",
         "kevinpapst/tabler-bundle": "dev-tac",
         "knplabs/knp-menu-bundle": "^3.2",
         "league/commonmark": "^2.2",
@@ -21,6 +22,7 @@
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.2",
         "sensio/framework-extra-bundle": "^6.1",
+        "spatie/icalendar-generator": "^2.3",
         "survos/base-bundle": "^2.3",
         "survos/workflow-extension-bundle": "*@dev",
         "symfony/asset": "6.0.*",
@@ -122,6 +124,10 @@
         "zenstruck/foundry": "^1.17"
     },
     "repositories": {
+        "ics_bundle": {
+            "type": "vcs",
+            "url": "git@github.com:tacman/IcsBundle.git"
+        },
         "survosworkflow": {
             "type": "path",
             "url": "../../bundles/WorkflowBundle"
