--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,13 @@
         "doctrine/orm": "^2.11",
         "gedmo/doctrine-extensions": "^3.6",
         "graceas/php-ics-reader": "^1.1",
+        "johngrogg/ics-parser": "^3.1",
         "jsvrcek/ics-bundle": "dev-tac",
         "kevinpapst/tabler-bundle": "dev-tac",
         "knplabs/knp-menu-bundle": "^3.2",
         "league/commonmark": "^2.2",
         "nelmio/cors-bundle": "^2.2",
+        "nesbot/carbon": "^2.57",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.2",
         "sensio/framework-extra-bundle": "^6.1",
@@ -26,6 +28,7 @@
         "survos/base-bundle": "^2.3",
         "survos/workflow-extension-bundle": "*@dev",
         "symfony/asset": "6.0.*",
+        "symfony/config": "6.0.*",
         "symfony/console": "6.0.*",
         "symfony/doctrine-messenger": "6.0.*",
         "symfony/dotenv": "6.0.*",
@@ -116,6 +119,7 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "friendsofphp/php-cs-fixer": "^3.8",
+        "spatie/ray": "^1.34",
         "survos/maker-bundle": "dev-main",
         "symfony/debug-bundle": "6.0.*",
         "symfony/maker-bundle": "^1.38",
