--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "dependencies": {
         "@fullcalendar/core": "^5.10.1",
         "@fullcalendar/daygrid": "^5.10.1",
+        "@fullcalendar/icalendar": "^5.11.0",
         "@fullcalendar/interaction": "^5.10.1",
+        "@fullcalendar/list": "^5.11.0",
         "@fullcalendar/timegrid": "^5.10.1",
         "@kanety/stimulus-menu": "^1.0.4",
         "axios": "^0.26.1",
@@ -29,6 +31,7 @@
         "flatpickr": "^4.6.11",
         "mmenu-js": "^9.1.1",
         "mmenu-light": "^3.1.1",
+        "node-ray": "^1.18.0",
         "stimulus-flatpickr": "^1.4.0",
         "tailwindcss": "^3.0.23"
     }
