--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-bundle": "^2.5",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
+        "dunglas/doctrine-json-odm": "^1.2",
         "gedmo/doctrine-extensions": "^3.6",
         "graceas/php-ics-reader": "^1.1",
         "johngrogg/ics-parser": "^3.1",
