--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
         "dunglas/doctrine-json-odm": "^1.2",
-        "gedmo/doctrine-extensions": "^3.6",
+        "friendsofsymfony/jsrouting-bundle": "^3.1",
+        "gedmo/doctrine-extensions": "^3.7",
         "graceas/php-ics-reader": "^1.1",
         "johngrogg/ics-parser": "^3.1",
         "jsvrcek/ics-bundle": "dev-tac",
@@ -26,38 +27,39 @@
         "phpstan/phpdoc-parser": "^1.2",
         "sensio/framework-extra-bundle": "^6.1",
         "spatie/icalendar-generator": "^2.3",
+        "stof/doctrine-extensions-bundle": "^1.7",
         "survos/base-bundle": "^2.3",
         "survos/workflow-extension-bundle": "*@dev",
-        "symfony/asset": "6.0.*",
-        "symfony/config": "6.0.*",
-        "symfony/console": "6.0.*",
-        "symfony/doctrine-messenger": "6.0.*",
-        "symfony/dotenv": "6.0.*",
-        "symfony/expression-language": "6.0.*",
+        "symfony/asset": "^6.0",
+        "symfony/config": "^6.0",
+        "symfony/console": "^6.0",
+        "symfony/doctrine-messenger": "^6.0",
+        "symfony/dotenv": "^6.0",
+        "symfony/expression-language": "^6.0",
         "symfony/flex": "^2",
-        "symfony/form": "6.0.*",
-        "symfony/framework-bundle": "6.0.*",
-        "symfony/http-client": "6.0.*",
-        "symfony/intl": "6.0.*",
-        "symfony/mailer": "6.0.*",
-        "symfony/mime": "6.0.*",
+        "symfony/form": "^6.0",
+        "symfony/framework-bundle": "^6.0",
+        "symfony/http-client": "^6.0",
+        "symfony/intl": "^6.0",
+        "symfony/mailer": "^6.0",
+        "symfony/mime": "^6.0",
         "symfony/monolog-bundle": "^3.0",
-        "symfony/notifier": "6.0.*",
-        "symfony/process": "6.0.*",
-        "symfony/property-access": "6.0.*",
-        "symfony/property-info": "6.0.*",
-        "symfony/proxy-manager-bridge": "6.0.*",
-        "symfony/runtime": "6.0.*",
-        "symfony/security-bundle": "6.0.*",
-        "symfony/serializer": "6.0.*",
-        "symfony/string": "6.0.*",
-        "symfony/translation": "6.0.*",
-        "symfony/twig-bundle": "6.0.*",
-        "symfony/validator": "6.0.*",
-        "symfony/web-link": "6.0.*",
+        "symfony/notifier": "^6.0",
+        "symfony/process": "^6.0",
+        "symfony/property-access": "^6.0",
+        "symfony/property-info": "^6.0",
+        "symfony/proxy-manager-bridge": "^6.0",
+        "symfony/runtime": "^6.0",
+        "symfony/security-bundle": "^6.0",
+        "symfony/serializer": "^6.0",
+        "symfony/string": "^6.0",
+        "symfony/translation": "^6.0",
+        "symfony/twig-bundle": "^6.0",
+        "symfony/validator": "^6.0",
+        "symfony/web-link": "^6.0",
         "symfony/webapp-meta": "^1.0",
         "symfony/webpack-encore-bundle": "^1.12",
-        "symfony/yaml": "6.0.*",
+        "symfony/yaml": "^6.0",
         "tabler/tabler": "^0.0.33",
         "tattali/calendar-bundle": "^1.2",
         "twig/extra-bundle": "^2.12|^3.0",
@@ -98,6 +100,7 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
+            "fos:js-routing:dump --format=json --target=public/js/fos_js_routes.json": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
@@ -114,7 +117,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": "true",
-            "require": "6.0.*"
+            "require": "^6.1"
         }
     },
     "require-dev": {
@@ -122,10 +125,10 @@
         "friendsofphp/php-cs-fixer": "^3.8",
         "spatie/ray": "^1.34",
         "survos/maker-bundle": "dev-main",
-        "symfony/debug-bundle": "6.0.*",
+        "symfony/debug-bundle": "^6.0",
         "symfony/maker-bundle": "^1.38",
-        "symfony/stopwatch": "6.0.*",
-        "symfony/web-profiler-bundle": "6.0.*",
+        "symfony/stopwatch": "^6.0",
+        "symfony/web-profiler-bundle": "^6.0",
         "zenstruck/foundry": "^1.17"
     },
     "repositories": {
