--- a/package.json
+++ b/package.json
@@ -26,23 +26,22 @@
         "@fullcalendar/list": "^5.11.0",
         "@fullcalendar/timegrid": "^5.10.1",
         "@kanety/stimulus-menu": "^1.0.4",
-
+        "axios": "^0.26.1",
+        "bootstrap": "^5.1.3",
+        "bootstrap-icons": "^1.8.2",
         "datatables.net-bs5": "^1.10.25",
         "datatables.net-buttons": "^2.2.2",
         "datatables.net-buttons-bs5": "^1.7.1",
         "datatables.net-colreorder": "^1.5.4",
         "datatables.net-colreorder-bs5": "^1.5.4",
+        "datatables.net-fixedheader-bs5": "^3.2.2",
         "datatables.net-scroller": "^2.0.4",
         "datatables.net-scroller-bs5": "^2.0.4",
         "datatables.net-searchpanes": "^1.3.0",
         "datatables.net-searchpanes-bs5": "^1.3.0",
         "datatables.net-select-bs5": "^1.3.3",
-        "datatables.net-fixedheader-bs5": "^3.2.2",
-
-
-        "axios": "^0.26.1",
-        "bootstrap": "^5.1.3",
         "flatpickr": "^4.6.11",
+        "fullcalendar": "^5.11.0",
         "mmenu-js": "^9.1.1",
         "mmenu-light": "^3.1.1",
         "node-ray": "^1.18.0",
