remove some older bundles, working but ui is ugly

--- a/config/packages/survos_base.yaml
+++ b/config/packages/survos_base.yaml
@@ -1,21 +1,21 @@
-survos_base:
-  theme: umbrella
-#  theme: start-bootstrap
-#  menu:
-#    enable: true
-#    main_menu: survos_sidebar_menu
-#    breadcrumb_menu: true
+#survos_base:
+#  theme: umbrella
+##  theme: start-bootstrap
+##  menu:
+##    enable: true
+##    main_menu: survos_sidebar_menu
+##    breadcrumb_menu: true
+##
+##  routes:
+##    adminlte_welcome: app_homepage
+##    adminlte_login: app_login
+##    adminlte_profile: app_profile
+##
+##
 #
-#  routes:
-#    adminlte_welcome: app_homepage
-#    adminlte_login: app_login
-#    adminlte_profile: app_profile
-#
-#
-
-twig:
-  globals:
-    theme: umbrella
-  paths:
-#    'email/default/templates': ~
-    'vendor/survos/base-bundle/src/Resources/views/umbrella': 'theme'
+#twig:
+#  globals:
+#    theme: umbrella
+#  paths:
+##    'email/default/templates': ~
+#    'vendor/survos/base-bundle/src/Resources/views/umbrella': 'theme'
