--- a/config/routes/survos_base.yaml
+++ b/config/routes/survos_base.yaml
@@ -1,14 +1,14 @@
-survos_base_bundle_oauth:
-    resource: '@SurvosBaseBundle/Controller/OAuthController.php'
-    prefix: /
-    type: annotation
-
-survos_landing: {path: /landing, controller: 'Survos\BaseBundle\Controller\LandingController::landing'}
-app_logo: {path: /logo, controller: 'Survos\BaseBundle\Controller\LandingController::logo'}
-app_profile: {path: /profile, controller: 'Survos\BaseBundle\Controller\LandingController::profile'}
-profile: {path: /profile, controller: 'Survos\BaseBundle\Controller\LandingController::profile'}
-#logout: {path: /profile, controller: 'Survos\BaseBundle\Controller\LandingController::logout'}
-# required if app_profile is used, since you can change the password from the profile
-app_change_password: {path: /change-password, controller: 'Survos\BaseBundle\Controller\LandingController::changePassword'}
-app_typography: {path: /typography, controller: 'Survos\BaseBundle\Controller\LandingController::typography'}
-survos_base_credits: {path: "/credits/{type}", controller: 'Survos\BaseBundle\Controller\LandingController::credits'}
+#survos_base_bundle_oauth:
+#    resource: '@SurvosBaseBundle/Controller/OAuthController.php'
+#    prefix: /
+#    type: annotation
+#
+#survos_landing: {path: /landing, controller: 'Survos\BaseBundle\Controller\LandingController::landing'}
+#app_logo: {path: /logo, controller: 'Survos\BaseBundle\Controller\LandingController::logo'}
+#app_profile: {path: /profile, controller: 'Survos\BaseBundle\Controller\LandingController::profile'}
+#profile: {path: /profile, controller: 'Survos\BaseBundle\Controller\LandingController::profile'}
+##logout: {path: /profile, controller: 'Survos\BaseBundle\Controller\LandingController::logout'}
+## required if app_profile is used, since you can change the password from the profile
+#app_change_password: {path: /change-password, controller: 'Survos\BaseBundle\Controller\LandingController::changePassword'}
+#app_typography: {path: /typography, controller: 'Survos\BaseBundle\Controller\LandingController::typography'}
+#survos_base_credits: {path: "/credits/{type}", controller: 'Survos\BaseBundle\Controller\LandingController::credits'}
