--- a/composer.json
+++ b/composer.json
@@ -24,11 +24,9 @@
         "nesbot/carbon": "^2.57",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.2",
-        "sensio/framework-extra-bundle": "^6.1",
         "spatie/icalendar-generator": "^2.3",
         "stof/doctrine-extensions-bundle": "^1.7",
-        "survos/base-bundle": "^2.3",
-        "survos/workflow-extension-bundle": "*@dev",
+        "survos/bootstrap-bundle": "^1.4",
         "symfony/asset": "^6.0",
         "symfony/config": "^6.0",
         "symfony/console": "^6.0",
@@ -131,10 +129,6 @@
         "zenstruck/foundry": "^1.17"
     },
     "repositories": {
-        "survosworkflow": {
-            "type": "path",
-            "url": "../../bundles/WorkflowBundle"
-        },
         "tabler_bundle": {
             "type": "vcs",
             "url": "git@github.com:survos/TablerBundle.git"
@@ -143,7 +137,6 @@
             "type": "vcs",
             "url": "git@github.com:tacman/tabler.git"
         },
-
         "survos_admin_bundle": {
             "type": "vcs",
             "url": "git@github.com:survos/SurvosAdminBundle.git"
