--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,7 @@
         "symfony/web-link": "^6.0",
         "symfony/webapp-meta": "^1.0",
         "symfony/webpack-encore-bundle": "^1.12",
+        "symfony/workflow": "^6.1",
         "symfony/yaml": "^6.0",
         "tabler/tabler": "^0.0.33",
         "tattali/calendar-bundle": "^1.2",
@@ -68,7 +69,8 @@
         "allow-plugins": {
             "composer/package-versions-deprecated": true,
             "symfony/flex": true,
-            "symfony/runtime": true
+            "symfony/runtime": true,
+            "endroid/installer": true
         },
         "optimize-autoloader": true,
         "preferred-install": {
@@ -120,6 +122,7 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "friendsofphp/php-cs-fixer": "^3.8",
+        "rector/rector": "^1.0",
         "spatie/ray": "^1.34",
         "survos/maker-bundle": "^1.5",
         "symfony/debug-bundle": "^6.0",
