--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,6 @@
         "gedmo/doctrine-extensions": "^3.7",
         "graceas/php-ics-reader": "^1.1",
         "johngrogg/ics-parser": "^3.1",
-        "kevinpapst/tabler-bundle": "dev-tac",
         "knplabs/knp-menu-bundle": "^3.2",
         "league/commonmark": "^2.2",
         "nelmio/cors-bundle": "^2.2",
@@ -26,7 +25,7 @@
         "phpstan/phpdoc-parser": "^1.2",
         "spatie/icalendar-generator": "^2.3",
         "stof/doctrine-extensions-bundle": "^1.7",
-        "survos/bootstrap-bundle": "^1.4",
+        "survos/bootstrap-bundle": "^1.5",
         "symfony/asset": "^6.0",
         "symfony/config": "^6.0",
         "symfony/console": "^6.0",
@@ -54,21 +53,21 @@
         "symfony/twig-bundle": "^6.0",
         "symfony/validator": "^6.0",
         "symfony/web-link": "^6.0",
-        "symfony/webapp-meta": "^1.0",
         "symfony/webpack-encore-bundle": "^1.12",
+        "symfony/workflow": "^6.1",
         "symfony/yaml": "^6.0",
         "tabler/tabler": "^0.0.33",
         "tattali/calendar-bundle": "^1.2",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/markdown-extra": "^3.3",
-        "twig/twig": "^2.12|^3.0",
-        "umbrella2/adminbundle": "^6.1"
+        "twig/twig": "^2.12|^3.0"
     },
     "config": {
         "allow-plugins": {
             "composer/package-versions-deprecated": true,
             "symfony/flex": true,
-            "symfony/runtime": true
+            "symfony/runtime": true,
+            "endroid/installer": true
         },
         "optimize-autoloader": true,
         "preferred-install": {
